<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.arno.maxcupcake.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/str_mainTitle"
        android:textColor="@android:color/darker_gray" />

    <Button
        android:id="@+id/button_movie"
        style="@style/CustomButtonMain"
        android:layout_below="@id/textView"
        android:layout_marginTop="0dp"
        android:text="@string/str_movie" />

    <Button
        android:id="@+id/button_share"
        style="@style/CustomButtonMain"
        android:layout_below="@id/button_movie"
        android:layout_marginTop="14dp"
        android:text="@string/str_share" />

    <Button
        android:id="@+id/button_reader"
        style="@style/CustomButtonMain"
        android:layout_below="@id/button_share"
        android:layout_marginTop="14dp"
        android:text="@string/str_reader" />

    <Button
        android:id="@+id/button_news"
        style="@style/CustomButtonMain"
        android:layout_below="@id/button_reader"
        android:layout_marginTop="14dp"
        android:text="@string/str_news" />

    <Button
        android:id="@+id/button_graduation"
        style="@style/CustomButtonMain"
        android:layout_below="@id/button_news"
        android:layout_marginTop="14dp"
        android:text="@string/str_graduation" />

</RelativeLayout>
